--- a/services/frontend/src/app/harmonic-signal-page/harmonic-signal-view-page/harmonic-signal-view-page.component.html
+++ b/services/frontend/src/app/harmonic-signal-page/harmonic-signal-view-page/harmonic-signal-view-page.component.html
@@ -11,7 +11,7 @@
     </span>
 </div>
 
-<div class="row" *ngIf="harmonicSignal">
+<div *ngIf="harmonicSignal">
     <div class="input-field">
         <input id="amplitude" type="number" [readOnly]="true" [(ngModel)]="harmonicSignal.amplitude">
         <label class="active" for="amplitude">Amplitude</label>
@@ -24,4 +24,6 @@
         <input id="initial_phase" type="number" [readOnly]="true" [(ngModel)]="harmonicSignal.initial_phase">
         <label class="active" for="initial_phase">Initial phase</label>
     </div>
+    <plotly-plot *ngIf="harmonicSignalResult" [data]="plotData" [layout]="plotLayout"></plotly-plot>
 </div>
+
