--- a/services/frontend/src/app/shared/components/layouts/site-layout/site-layout.component.html
+++ b/services/frontend/src/app/shared/components/layouts/site-layout/site-layout.component.html
@@ -1,15 +1,63 @@
-<ul class="sidenav sidenav-fixed a-sidenav">
-    <h4>{{ title }}</h4>
-    <li class="bold" *ngFor="let link of links" routerLinkActive="active">
-        <a [routerLink]="[link.url]" class="waves-effect waves-orange">{{ link.name }}</a>
-    </li>
+<body>
+    <header>
+        <nav>
+            <div class="nav-wrapper teal">
+                <a routerLink="/" class="brand-logo white-text">{{ title }}</a>
+                <a data-target="mobile-ver" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li class="bold" *ngFor="let link of links">
+                        <a class="waves-effect waves-orange white-text" [routerLink]="[link.url]">{{ link.name }}</a>
+                    </li>
 
-    <li class="bold last">
-        <a href="#" class="waves-effect waves-orange" (click)="logout($event)">Exit</a>
-    </li>
-</ul>
+                    <li class="bold last" *ngIf="authService.isAuthenticated()">
+                        <a href="#" class="waves-effect waves-orange" (click)="logout($event)">Exit</a>
+                    </li>
 
-<main class="content">
-    <router-outlet></router-outlet>
-</main>
+                    <li class="bold" *ngIf="!authService.isAuthenticated()">
+                        <a class="waves-effect waves-orange white-text" [routerLink]="['/login']">Login</a>
+                    </li>
+                    <li class="bold last" *ngIf="!authService.isAuthenticated()">
+                        <a class="waves-effect waves-orange white-text" [routerLink]="['/register']">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
+        <ul class="sidenav" id="mobile-ver">
+            <li class="bold" *ngFor="let link of links" routerLinkActive="active">
+                <a class="waves-effect waves-orange" [routerLink]="[link.url]">{{ link.name }}</a>
+            </li>
+        </ul>
+    </header>
+
+    <main>
+        <div class="content">
+            <router-outlet></router-outlet>
+        </div>
+    </main>
+
+    <footer class="row page-footer teal">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Digital Signal Processing</h5>
+                    <p class="grey-text text-lighten-4">Generate and visualize basic operations of digital signal processing</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li class="bold" *ngFor="let link of links">
+                            <a class="grey-text text-lighten-3" [routerLink]="[link.url]">{{ link.name }}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2022 DSP Morozov
+                <a class="grey-text text-lighten-4 right" href="https://github.com/yuramorozov01/dsp">GitHub</a>
+            </div>
+        </div>
+    </footer>
+</body>
