fix (frontend): send websocket before its connected

--- a/services/frontend/src/app/main-page/main-page.component.html
+++ b/services/frontend/src/app/main-page/main-page.component.html
@@ -8,8 +8,7 @@
                     <h5 class="header col s12 light">Visualization of basic digital signal processing operations</h5>
                 </div>
                 <div class="row center">
-                    <a href="http://materializecss.com/getting-started.html" id="download-button"
-                       class="btn-large waves-effect waves-light teal">Get Started</a>
+                    <a class="btn-large waves-effect waves-light teal" [routerLink]="['/harmonic_signal']">Get Started</a>
                 </div>
                 <br><br>
             </div>
