feat (frontend): add base history page component

--- a/services/frontend/src/app/main-page/main-page.component.html
+++ b/services/frontend/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
         <div class="section no-pad-bot ">
             <div class="container">
                 <br><br>
-                <h1 class="header center teal-text text-lighten-2">{{ title }}</h1>
+                <h1 class="header center teal-text">{{ title }}</h1>
                 <div class="row center">
                     <h5 class="header col s12 light">Visualization of basic digital signal processing operations</h5>
                 </div>
@@ -106,7 +106,7 @@
             <div class="container">
                 <br><br>
                 <div class="row center">
-                    <h3 class="header center teal-text">Enjoy studying!</h3>
+                    <h3 class="header center teal-text text-lighten-2">Enjoy studying!</h3>
                 </div>
                 <br><br>
             </div>
