--- a/services/frontend/src/app/fourier-transform-page/fourier-transform-page.component.html
+++ b/services/frontend/src/app/fourier-transform-page/fourier-transform-page.component.html
@@ -1,1 +1,40 @@
-<p>fourier-transform-page works!</p>
+<div class="page-title">
+    <h4>
+        <a routerLink="/fourier_transform">Fourier transform</a>
+    </h4>
+    <span>
+        <button class="btn btn-small red" (click)="saveFourierTransform()">Save</button>
+    </span>
+</div>
+
+<div class="row">
+    <form class="col s12 m6 l3" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="input-field">
+            <input formControlName="amplitudes" id="amplitudes" type="text" placeholder="33,8" [ngClass]="{'invalid': form.get('amplitudes').invalid && form.get('amplitudes').touched}" required>
+            <label class="active" for="amplitudes">Amplitudes</label>
+            <span class="helper-text red-text" *ngIf="form.get('amplitudes').invalid && form.get('amplitudes').touched">
+            	<span *ngIf="form.get('amplitudes').errors['required']">Enter amplitudes</span>
+                <span *ngIf="form.get('amplitudes').errors['pattern']">Incorrect amplitudes (format: digit[,digit])</span>
+            </span>
+        </div>
+        <div class="input-field">
+            <input formControlName="frequencies" id="frequencies" type="text" placeholder="5,89" [ngClass]="{'invalid': form.get('frequencies').invalid && form.get('frequencies').touched}" required>
+            <label class="active" for="frequencies">Frequencies</label>
+            <span class="helper-text red-text" *ngIf="form.get('frequencies').invalid && form.get('frequencies').touched">
+            	<span *ngIf="form.get('frequencies').errors['required']">Enter frequencies</span>
+                <span *ngIf="form.get('frequencies').errors['pattern']">Incorrect frequencies (format: digit[,digit])</span>
+            </span>
+        </div>
+        <div>
+            <button type="submit" [disabled]="form.invalid || form.disabled" class="waves-effect waves-light btn">
+                Calculate
+            </button>
+        </div>
+    </form>
+    <div class="col s12 m12 l12">
+        <plotly-plot *ngIf="fourierTransformResult" [data]="plotData" [layout]="plotLayout" [config]=""></plotly-plot>
+    </div>
+</div>
+
+
+<app-save-modal #saveModal></app-save-modal>
