feat (frontend): add read-only label to harmonic signal view page

--- a/services/frontend/src/app/harmonic-signal-page/harmonic-signal-view-page/harmonic-signal-view-page.component.html
+++ b/services/frontend/src/app/harmonic-signal-page/harmonic-signal-view-page/harmonic-signal-view-page.component.html
@@ -2,7 +2,7 @@
     <h4>
         <a routerLink="/harmonic_signal">Harmonic signal</a>
         <i class="material-icons">keyboard_arrow_right</i>
-        View harmonic signal
+        View harmonic signal (Read-Only mode)
     </h4>
     <span>
         <button class="btn btn-small red" (click)="deleteHarmonicSignal()" *ngIf="harmonicSignal">
