--- a/services/frontend/src/app/fourier-transform-page/fourier-transform-page.component.html
+++ b/services/frontend/src/app/fourier-transform-page/fourier-transform-page.component.html
@@ -37,7 +37,7 @@
     <div class="col s12 m12 l12" *ngIf="fourierTransformResult">
         <div class="row">
             <div class="col s4 m4 4 center" *ngFor="let data of plotDataHarmonics; index as i">
-                <plotly-plot [data]="data" [layout]="this.plotLayoutHarmonics[i]"></plotly-plot>
+                <plotly-plot id="polyharmonic-{{ i }}" [data]="data" [layout]="this.plotLayoutHarmonics[i]"></plotly-plot>
                 <p>
                     <label>
                         <input type="checkbox" class="filled-in" value="{{ i }}" (change)="recalcResultPolyharmonic(i, $event)" id="{{ i }}" checked="checked" />
