--- a/services/frontend/src/styles.css
+++ b/services/frontend/src/styles.css
@@ -2,3 +2,4 @@
 @import "theme/styles.min.css";
 @import "theme/styles.second.css";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
+@import "~nouislider/dist/nouislider.min.css";
