feat (frontend): add simple correlation view result page

--- a/services/frontend/src/app/simple-correlation-page/simple-correlation-page.component.html
+++ b/services/frontend/src/app/simple-correlation-page/simple-correlation-page.component.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="col s12 m12 l12">
-            <plotly-plot id="polyharmonicResult" *ngIf="simpleCorrelationResult" [data]="plotDataSignalResult" [layout]="plotLayoutSignalResult" #polyharmonicResult></plotly-plot>
+            <plotly-plot id="polyharmonicResult" *ngIf="simpleCorrelationResult" [data]="plotDataSignalResult" [layout]="plotLayoutSignalResult"></plotly-plot>
         </div>
     </form>
     <div class="col s12 m12 l12">
