--- a/services/frontend/src/app/shared/components/save-modal/save-modal.component.html
+++ b/services/frontend/src/app/shared/components/save-modal/save-modal.component.html
@@ -7,7 +7,7 @@
         all your saved results.</div>
     </div>
     <div class="modal-footer">
-        <a href="{{ link }}" class="modal-close waves-effect waves-green btn-flat">View</a>
+        <a href="{{ link }}" class="modal-close waves-effect waves-green btn-flat" target="_blank">View</a>
         <a class="modal-close waves-effect waves-green btn-flat">OK</a>
     </div>
 </div>
