chore: docs update

--- a/services/frontend/src/app/image-correlation-page/image-correlation-view-page/image-correlation-view-page.component.css
+++ b/services/frontend/src/app/image-correlation-page/image-correlation-view-page/image-correlation-view-page.component.css
@@ -1,6 +1,6 @@
 .image-preview {
-    height: 300px;
-    width: auto;
+    height: auto;
+    width: 300px;
     object-fit: scale-down;
     object-position: 0 0; /*top left position (optional)*/
 }
